src/snapshots/coxtop__chair_panel__tests__renders_closed_snapshot_in_the_harbor_light_theme.snap
---
source: src/chair_panel.rs
assertion_line: 711
expression: "drawn(&panel, ThemeId::HarborLight)"
---
"┌ chair ─────────────────────┐"
"│no session published        │"
"│Enter starts a session      │"
"│                            │"
"│                            │"
"└────────────────────────────┘"
