src/snapshots/coxtop__chair_panel__tests__renders_closed_snapshot_in_the_regatta_theme.snap
---
source: src/chair_panel.rs
assertion_line: 705
expression: "drawn(&panel, ThemeId::Regatta)"
---
"┌ chair ─────────────────────┐"
"│no session published        │"
"│                            │"
"│                            │"
"│                            │"
"└────────────────────────────┘"
