src/snapshots/coxtop__chair_panel__tests__renders_open_snapshot_in_the_harbor_light_theme.snap
---
source: src/chair_panel.rs
assertion_line: 721
expression: "drawn(&open_panel(), ThemeId::HarborLight)"
---
"┌ chair ─────────────────────┐"
"│hello                       │"
"│world                       │"
"│                            │"
"│                            │"
"└────────────────────────────┘"
