src/snapshots/coxtop__chair_panel__tests__renders_open_snapshot_in_the_regatta_theme.snap
---
source: src/chair_panel.rs
assertion_line: 1038
expression: "drawn(&open_panel(), ThemeId::Regatta)"
---
"┌ chair · ` focus · \ close ·┐"
"│hello                       │"
"│world                       │"
"│                            │"
"│                            │"
"└────────────────────────────┘"
